--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <p><b>Gmail API</b></p>
+    
+    <p>Please create your google credentials for api key and client ID for desktop application 
 
 
     <div class="container">
