--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <p><b>Gmail API</b></p>
     
-    <p>Please create your google credentials for api key and client ID for desktop application 
+    <p><b>Please create your google credentials for api key and client ID and replace the values in line number 3 and 4 of the script js file for the application to work</b></p
 
 
     <div class="container">
